--- a/main_style.css
+++ b/main_style.css
@@ -13,8 +13,15 @@ body {
 h1 {
   text-align: center;
   margin: 0;
-  font-size: 1.8em;
+  font-size: 2.2em;
   padding: 20px 0;
+}
+
+h3 {
+  text-align: center;
+  margin: 0;
+  font-size: 1.4em;
+  padding: 0px 0;
 }
 
 .container {
@@ -39,4 +46,11 @@ h1 {
 h2 {
   margin: 0 0 20px 0;
   font-size: 1.5em;
+}
+
+form {
+  font-size: 1.5em;
+  margin: 0 auto; /* This centers the form horizontally */
+  text-align: center;
+  
 }
